Affichage grossier de la liste des profils

--- a/sources/backend/src/main/resources/locale/securite.properties
+++ b/sources/backend/src/main/resources/locale/securite.properties
@@ -2,7 +2,7 @@ securite.droit.code=Droit
 securite.droit.libelle=Droit
 securite.profil.profil.id=Id technique du profil
 securite.profil.profil.libelle=Libellé du profil
-securite.profil.profilItem.nombreUtilisateurs=Nombre d'utilisateurs affectés
+securite.profil.profilItemRead.nombreUtilisateurs=Nombre d'utilisateurs affectés
 securite.typeDroit.code=Type de droit
 securite.typeUtilisateur.code=Type d'utilisateur
 securite.utilisateur.utilisateur.adresse=Adresse
